# ChangeLog for sci-biology/mothur
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-biology/cvs-repo/gentoo-x86/sci-biology/mothur/ChangeLog,v 1.5 2010/02/06 13:06:31 hwoarang Exp $

  06 Feb 2010; Markos Chandras <hwoarang@gentoo.org> mothur-1.6.0.ebuild:
  Stable on amd64 wrt bug #298777

*mothur-1.7.2 (29 Dec 2009)

  29 Dec 2009; Andrey Kislyuk <weaver@gentoo.org> +mothur-1.7.2.ebuild:
  Version bump

  29 Dec 2009; Christian Faulhammer <fauli@gentoo.org> mothur-1.6.0.ebuild:
  stable x86, bug 298777

*mothur-1.6.0 (31 Oct 2009)

  31 Oct 2009; Andrey Kislyuk <weaver@gentoo.org> +mothur-1.6.0.ebuild:
  Version bump

*mothur-1.4.1 (07 Jul 2009)

  07 Jul 2009; Andrey Kislyuk <weaver@gentoo.org> +metadata.xml,
  +mothur-1.4.1.ebuild:
  Import from Science overlay

  04 Mar 2009; Andrey Kislyuk <weaver@gentoo.org> ChangeLog:
  New package, ebuild written by me
