@@ -1,8 +1,6 @@
-DIST mothur-1.4.1.zip 401879 RMD160 fd78a9257fb075434ed6fa38b4df0847e978e274 SHA1 88b06fbd985f91822b42ecb9182bd340630c2429 SHA256 b5302d3f33f433d1991d822203cf9f0f1112c7dccd9663d9185402ec9eadd38d
 DIST mothur-1.6.0.zip 465292 RMD160 d4aeea76dfeba93d7d3524a54c307f12e87b5b26 SHA1 0e952079893a93892f4a84d548534598feba59da SHA256 75583a204d199ddcf9b845fc0adbaf240d7b1f08584fed5e6465982f68ffe121
 DIST mothur-1.7.2.zip 547035 RMD160 6368dc45ebd9df4a40d90d45dec16f8b36727ae1 SHA1 031e522118d23f259fcbefde70b4c2369caad67f SHA256 5347e3093a7c1ac1aec85db8e79640edb8c34b4c1b2f5ee5e9791ea7097db295
-EBUILD mothur-1.4.1.ebuild 710 RMD160 53b4a8f74563dda9dd30705915eb87f2ce57266b SHA1 134dd33d0cbb9ae62249058a6dac711debae9e1c SHA256 3df7e3727bf0ad9df5e80c60ce75869bfedd4e641271e40487d59cf169936791
 EBUILD mothur-1.6.0.ebuild 716 RMD160 6ca48f5fddae07fb3af31555fdb70c15d45871a0 SHA1 3094c119b60a19586ce5a9803ebf9d062cc143dc SHA256 82592ef7f15b963f43598c534b339b11052215d32a94bf5d9e8970902afe8e98
-EBUILD mothur-1.7.2.ebuild 715 RMD160 89825d852c68d6620156f1b9720f33c31f0f40c9 SHA1 e48f06d90bc74d553a70fcdf48106da69ed47fab SHA256 135aa2da16d03f4b5bc3e22e073d2fb17c24dde09824f5bd0b9ce9a94e72d9d5
-MISC ChangeLog 903 RMD160 1c6a4be0bb4473f81a4d608043034ae66d0a15f8 SHA1 b6aa1c6a2825f8f27688f27842c813584f4e3192 SHA256 177fbb968b9d442a6e38cf7979e42dc8cebdb1ff5d6fba7a1c17edd0cefa2538
+EBUILD mothur-1.7.2-r1.ebuild 687 RMD160 e9fcaa1c282d2dd2cb8187d0557c1a266addf214 SHA1 207eccc82e0e617ad79d7ea78d304eb8d56480db SHA256 5167361be77fa6ba4c91db2e39d90cb05b7ce534b9a0d9cd47a788fb409a88f3
+MISC ChangeLog 1143 RMD160 7448c2dda6bc956cdbf0b38075725c9dade1b4cf SHA1 17c4b4b30e8da386a9a382e83661abac276a5602 SHA256 c6698cb211b6fe64933aee05d29cc14c4e9f2b3bbd5d033525e830c02d1e027d
 MISC metadata.xml 259 RMD160 d9d81b67d635fabd81aef8ae0edf971211ae9072 SHA1 8e32f751c67ff891fa35405a2cf6fb33752d6eb1 SHA256 541c3fbcf299d9a8ccf4132ee61f9e53a5d737cefdaa6fdc77764d8d4c7f3110
